[package]
name = "wasm-reader"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
wasmparser = "0.47"
auto_enums = "0.7"
wasm-reader-traits = { path = "./wasm-reader-traits/", features = ["nightly"] }
derive-parse = { path = "./derive-parse" }
derive_more = "0.99"
failure = "0.1"

[dev-dependencies]
glob = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
