[package]
name = "derive-parse"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"
description = "Derive traits for wasm-reader"
license = "Unlicense"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_utils = "0.9"
